--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Whatsapp - واتس اب
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+<ion-content>
+  <img class="banner" src="assets/imgs/whatsapp-banner.png" alt="">
+  <div padding>
+    <p text-center>
+      تقدر تكلم اي رقم واتساب من دون ما تحفظه
+    </p>
+    <ion-item>
+      <ion-label position="fixed">+966</ion-label>
+      <ion-input [(ngModel)]="number" required type="number" placeholder="5XXXXXXXX"></ion-input>
+    </ion-item>
+    <ion-button class="message-button" (click)="openWhatsapp()" color="success" shape="round" expand="full" [disabled]="!number">كلم</ion-button>
+  </div>
+
+  <div class="copyrights">
+    <a href="https://saud.tech">@SaudAlhelali</a>
+  </div>
+  
 </ion-content>
