--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,16 @@
 
+.banner {
+    width: 100%;
+}
+
+.message-button {
+    margin: 30px 0;
+}
+
+.copyrights {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 100px;
+}
